cabal-version: 2.4

name: grawlix
version: 1.0.0.0

category: Documentation
description: Grawlix enables you to comment on Haskell documentation.
extra-source-files:
  .hlint.yaml
  brittany.yaml
  README.markdown
license: ISC
license-file: LICENSE.markdown
maintainer: Taylor Fausak
synopsis: Enables you to comment on Haskell documentation.

common library
  build-depends:
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    Cabal ^>= 2.4.1,
    filepath ^>= 1.4.2,
    http-client ^>= 0.5.14,
    http-client-tls ^>= 0.3.5,
    http-types ^>= 0.12.2,
    stm ^>= 2.5.0,
    tar ^>= 0.5.1,
    zlib ^>= 0.6.2,
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe

common executable
  import: library

  build-depends:
    grawlix,
  ghc-options:
    -rtsopts
    -threaded

library
  import: library

  autogen-modules: Paths_grawlix
  exposed-modules:
    Grawlix
    Grawlix.Main
    Grawlix.Version
  hs-source-dirs: source/library
  other-modules: Paths_grawlix

executable grawlix
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite test
  import: executable

  build-depends:
    brittany ^>= 0.11.0,
    directory ^>= 1.3.3,
    hlint ^>= 2.1.11,
    hspec ^>= 2.6.0,
    text ^>= 1.2.3,
    transformers ^>= 0.5.5,
  hs-source-dirs: source/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
