cabal-version: 2.4

name: grawlix
version: 1

executable grawlix
  build-depends:
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    Cabal ^>= 2.4.1,
    containers ^>= 0.6.0,
    deepseq ^>= 1.4.4,
    directory ^>= 1.3.3,
    filepath ^>= 1.4.2,
    http-client ^>= 0.5.14,
    http-client-tls ^>= 0.3.5,
    tar ^>= 0.5.1,
    time ^>= 1.8.0,
    zlib ^>= 0.6.2,
  default-language: Haskell2010
  ghc-options:
    -rtsopts
    -threaded
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
  main-is: grawlix.hs
